--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -3,6 +3,7 @@ title: "RedDwarfData: a simplified match dataset for machine learning in StarCra
 author: "J. J. Merelo"
 date: "20 de noviembre de 2017"
 output: pdf_document
+abstract: Starcraft is one of the most interesting arenas to test new machine learning and computational intelligence techniques; however, StarCraft matches take a long time and creating a good dataset for training can be hard; besides, analyzing match logs to extract the main characteristics can also be done in many different ways to the point that extracting and processing data itself can take an inordinate amount of time. In this paper we present one such simplified dataset extracted from Robinson and Watson, which we have called RedDwarfData, containing several thousand matches processed to frames, so that temporal studies can also be undertaken. This dataset is available under a free license. An initial analysis and appraisal of these matches is also made. 
 ---
 
 ```{r setup, include=FALSE}
