--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -4,13 +4,15 @@ author: "J. J. Merelo"
 date: "27 de noviembre de 2017"
 output: pdf_document
 abstract: Starcraft is one of the most interesting arenas to test new machine learning and computational intelligence techniques; however, StarCraft matches take a long time and creating a good dataset for training can be hard; besides, analyzing match logs to extract the main characteristics can also be done in many different ways to the point that extracting and processing data itself can take an inordinate amount of time. In this paper we present one such simplified dataset extracted from Robinson and Watson, which we have called RedDwarfData, containing several thousand matches processed to frames, so that temporal studies can also be undertaken. This dataset is available under a free license. An initial analysis and appraisal of these matches is also made. 
+bibliography: prediction.bib
 ---
 
 ```{r setup, include=FALSE}
 ```
 
 # Introduction
-\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998. The game consists of two opponents trying to beat each other over a squared arena. Every player has to build workers and buildings using the available resources located over the terrain. There exit three different kinds of species, any of then having different kinds of individuals. Species and individual differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms that could be used later in real problems including financial, military and logistics problems. 
+
+\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998. The game consists of two opponents trying to beat each other over a squared arena. Every player has to build workers and buildings using the available resources located over the terrain. There exit three different kinds of species, any of then having different kinds of individuals. Species and individual differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms [@ontanon2013survey] that could be used later in real problems including financial, military and logistics problems. 
 
 \emph{StarCraft} has become popular among researchers thanks to \emph{BWAPI}, an API developed by the community that allows programming artificial agents. These agents can act just like regular players, according to a previously established algorithm; but, more important, they can collectse data as matches are running. The data collected this way can be later analysed, so that machine learning techniques can be applied for both supervised and unsupervised learning.
 
@@ -30,4 +32,4 @@ A few macro analysis of the data in this dataset will allow us to compare it wit
 
 The mode is between 20 and 25 minutes, with average equal to **include variables here** and median **include median**. 
 
-# Bibliography
+## References
