--- a/prediction.bib
+++ b/prediction.bib
@@ -9,7 +9,7 @@
   publisher={IEEE}
 }
 
-@inproceedings{DBLP:conf/flairs/RobertsonW14,
+@inproceedings{RobertsonW14,
   author    = {Glen Robertson and
                Ian D. Watson},
   title     = {An Improved Dataset and Extraction Process for Starcraft {AI}},
@@ -69,6 +69,16 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+
+@article{buro2012real,
+  title={Real-time strategy game competitions},
+  author={Buro, Michael and Churchill, David},
+  journal={AI Magazine},
+  volume={33},
+  number={3},
+  pages={106},
+  year={2012}
+}
 
 
 @inproceedings{DBLP:conf/aiide/StanescuHEGB13,
