Added all the papers to the SOTA for issue #5

--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -22,11 +22,13 @@ The rest of the paper is organized as follows: next we will present the Starcraf
 
 ## State of the art
 
-The main motivation for writing this paper was the proliferation of new StarCraft datasets in the last few years. Players have been uploading their matches to several websites, such as TeamLiquid or CC, since... These datasets are usually employed by the player community to learn new playing techniques from other players. From the point of view of using them for AI training, however, these datasets are in raw form and require some kind of parsing and filtering in order to LISTA DE STARDATA. Moreover, a lot of uploaded replays may be corrupt or incomplete. Different authors have been processing these replays to create datasets that can be used to predict the outcome of a match or a battle or simply gather insights on gaming strategies. The first paper that describes the processing of replays was the one presented by Ravari et \cite{Ravari09}, where they processed replays to create a dataset to apply WHATEVER. The number of replays was XXXX.
+The main motivation for writing this paper was the proliferation of new StarCraft datasets in the last few years. Players have been uploading their matches command logs to several websites, such as TeamLiquid \footnote{\url{http://www.teamliquid.net}} or BWReplays \footnote{\url{http://www.bwreplays.com}} for over 10 years. These logs are usually employed by the player community to learn new playing techniques from other players. From the point of view of using them for AI training, however, these datasets are in raw form and require some kind of command execution, parsing, data selection and filtering in order to serve as a good base for learning models [@Stardata17]. Moreover, a lot of uploaded replays may be corrupt or incomplete. Different authors have been processing these replays to create datasets that can be used to predict the outcome of a match or a battle or simply gather insights on gaming strategies. The first paper that describes the processing of replays was the one presented by Weber and Mateas [@Weber09], where they processed replays to create a dataset to compare several classification algorithms. 5393 replays were used and they store specific events during the games, not the full game state, validating the possibility of predicting the winner of a game to a certain degree. Later, other datasets that store the full game state to apply generic machine learning techniques have appeared [@Synnaeve12].
 
-Robertson and Watson
+Instead providing the game logs directly, Robertson and Watson [@RobertsonW14] distributed the logs in a database, created by obtaining the replays from several replays webpages, executing the game and storing a large number of game features data every certain number of frames. This dataset has been used by other researchers, for example, to create models differentiating by race [@Ravari16].
 
-Recently, Lin et al. \cite{Stardata17} have released the largest dataset to date. It includes 65646 replays, storing the full state of the game, including up to 30 feature by unit and battle detections. Even using compression mechanisms, this dataset requires 365GB of space. 
+Recently, and built upon the Synnaeve and Bessiere work [@Synnaeve12], Lin et al. [@Stardata17] have released the largest dataset to date. It includes 65646 replays, storing the full state of the game every 3 frames, including up to 30 features by unit and battle detections, storing all the data in TorchCraft format to be accessed by specific software clients. Even using compression mechanisms, this dataset requires 365GB of space. The aim of using this dataset is to apply Deep Learning algorithms that require a large amount of data.
+
+However, there is not a small and limited dataset ready to use 
 
 ## Data extraction and filtering
 
