--- a/prediction.bib
+++ b/prediction.bib
@@ -320,3 +320,70 @@
   year={2007},
   publisher={IEEE}
 }
+
+
+
+
+@inproceedings{Stardata17,
+  author    = {Zeming Lin and
+               Jonas Gehring and
+               Vasil Khalidov and
+               Gabriel Synnaeve},
+  title     = {{STARDATA:} {A} StarCraft {AI} Research Dataset},
+  booktitle = {Proceedings of the Thirteenth {AAAI} Conference on Artificial Intelligence
+               and Interactive Digital Entertainment (AIIDE-17), October 5-9, 2017,
+               Snowbird, Little Cottonwood Canyon, Utah, {USA.}},
+  pages     = {50--56},
+  editor    = {Brian Magerko and
+               Jonathan P. Rowe},
+  publisher = {{AAAI} Press},
+  year      = {2017},
+  url       = {http://www.aaai.org/Library/AIIDE/aiide17contents.php},
+  isbn      = {978-1-57735-791-9},
+  timestamp = {Tue, 26 Sep 2017 10:08:15 +0200},
+  biburl    = {http://dblp.org/rec/bib/conf/aiide/2017},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+
+
+@inproceedings{Weber09,
+  author    = {Ben George Weber and
+               Michael Mateas},
+  title     = {A data mining approach to strategy prediction},
+  booktitle = {Proceedings of the 2009 {IEEE} Symposium on Computational Intelligence
+               and Games, {CIG} 2009, Milano, Italy, 7-10 September, 2009},
+  pages     = {140--147},
+  editor    = {Pier Luca Lanzi},
+  publisher = {{IEEE}},
+  year      = {2009},
+  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=5278415},
+  isbn      = {978-1-4244-4814-2},
+  timestamp = {Sat, 10 Sep 2011 12:50:56 +0200},
+  biburl    = {http://dblp.org/rec/bib/conf/cig/2009},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{Synnaeve12,
+  author    = {Gabriel Synnaeve and
+               Pierre Bessi{\`{e}}re},
+  title     = {A Dataset for StarCraft {AI} {\&} an Example of Armies Clustering},
+  journal   = {CoRR},
+  volume    = {abs/1211.4552},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1211.4552},
+  archivePrefix = {arXiv},
+  eprint    = {1211.4552},
+  timestamp = {Wed, 07 Jun 2017 14:42:45 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/abs-1211-4552},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{Ravari16,
+  title={StarCraft Winner Prediction},
+  author={Ravari, Yaser Norouzzadeh and Bakkes, Sander and Spronck, Pieter},
+  booktitle={Artificial Intelligence in Adversarial Games: Papers from the AIIDE Workshop. Twelfth Artificial Intelligence and Interactive Digital Entertainment Conference},
+  pages={2-8},
+  year={2016}
+}
