Revises data extraction
Mainly for English. It would be better if @deantares and @fergunet
review it to check that it's clear to everyone. Refs #3

--- a/prediction.bib
+++ b/prediction.bib
@@ -1,3 +1,13 @@
+@article{yoon2001starcraft,
+  title={When the Starcraft launches on the other side of planet: An ethnographic study of the network game in Korea},
+  author={Yoon, Sunny},
+  journal={Korea Journalism Studies},
+  volume={45},
+  number={2},
+  pages={316--437},
+  year={2001}
+}
+
 @article{ontanon2013survey,
   title={A survey of real-time strategy game ai research and competition in starcraft},
   author={Ontan{\'o}n, Santiago and Synnaeve, Gabriel and Uriarte, Alberto and Richoux, Florian and Churchill, David and Preuss, Mike},
