--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -12,7 +12,7 @@ bibliography: prediction.bib
 
 # Introduction
 
-\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998. The game consists of two opponents trying to beat each other over a squared arena. Every player has to build workers and buildings using the available resources located over the terrain. There exit three different kinds of species, any of then having different kinds of individuals. Species and individual differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms [@ontanon2013survey] that could be used later in real problems including financial, military and logistics problems. 
+\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998 [@yoon2001starcraft]. The game consists of two opponents trying to beat each other over a squared arena. Every player has to build workers and buildings using the available resources located over the terrain. There exit three different kinds of species, any of then having different kinds of individuals. Species and individual differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms [@ontanon2013survey] that could be used later in real problems including financial, military and logistics problems. 
 
 \emph{StarCraft} has become popular among researchers thanks to \emph{BWAPI}, an API developed by the community that allows programming artificial agents and that was developed for StarCraft competitions [@buro2012real]. These agents can act just like regular players, according to a previously established algorithm; but, more important, they can collectse data as matches are running. The data collected this way can be later analysed, so that machine learning techniques can be applied for both supervised and unsupervised learning.
 
@@ -32,17 +32,17 @@ However, there is not a small and limited dataset ready to use for teaching purp
 
 ## Data extraction and filtering
 
-Six relational databases are provided by the work of [@RobertsonW14] so an intermediate step to produce an usable CSV file is needed. A query which extract data from one single replay is developed, and it is explained on the lines below. A simple function which iterates over all the replays is developed too, but the most difficult task is the parsing of one replay.
+Six relational databases have been provided by [@RobertsonW14], which means that an intermediate step to produce an usable CSV file is needed. A query which extract data from one single replay has been developed; it is explained on the lines below. A simple function which iterates over all the replays has been developed too, but the most difficult task is parsing individual replays.
 
-Focusing in one single match, identified by it \emph{ReplayID}, the first step is take the \emph{Duration} and the identifiers \emph{PlayerReplayID} of the two players involved in the game. The \emph{PlayerReplayID} with less value is taken as the first player, but the data is not biased by this fact. 
+Focusing in one single match, identified by it \emph{ReplayID}, the first step is to take the \emph{Duration} and the identifiers \emph{PlayerReplayID} of the two players involved in the game. The \emph{PlayerReplayID} with the minimum value is taken as the first player; this does not actually introduce a bias. 
 
-In the second place, it is important to take a time reference to be able to track the match in every moment. The chosen reference is the \emph{Frame} when a change in resources (\emph{Minerals}, \emph{Gas} and \emph{Supply}) is performed. This instant does not have to be the same for the two players, so all the instant when a change is discovered are saved. This choice implies a lot of empty values in the database; however, it is easily fixed taking the last known value to fill each empty one: if there is not a change for a player, the resources would be the last seen ones.
+As a next step, it is important to take a time reference to be able to track the match in every moment. The chosen reference is the \emph{Frame} when a change in resources (\emph{Minerals}, \emph{Gas} and \emph{Supply}) occurs. This instant does not have to be the same for the two players, so all the instants when a change is discovered are saved. This choice implies a lot of empty values in the database; however, this is easily fixed taking the last known value to fill each empty one: if there is not a change for a player, the resources would be the last seen ones.
 
-This decision is also important to track the units: they are valued with their price in resources, and the value recorded in the original database is splitted by regions. To register the value of some units, all the region's values have to be summed, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated.
+This decision is also important to track the units: they are valued by their price in resources, and the value recorded in the original database is splitt by regions. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated.
 
 These units values are also available in the enemy's direction: the estimation of the enemy's values is recorded in the dataset, so the last proccess is also done for these records.  
 
-With all the data well-formed, only the \emph{ReplayID}, \emph{Winner} and \emph{Duration} have to be added to the match. The data of a game have not any missing values, so they are ready to be saved. As it was said before, this proccess has to be repeated for each match. 
+With all the data well-formed, only the \emph{ReplayID}, \emph{Winner} and \emph{Duration} have to be added to the match. The data of a game does not have any missing values, so they are ready to be saved. As it was said before, this proccess has to be repeated for each match. 
 
 
 ## The big picture
