--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -8,6 +8,18 @@ bibliography: prediction.bib
 ---
 
 ```{r setup, include=FALSE}
+#Librerías
+source("scripts/funciones.R")
+
+# Load data. normalizado.csv will have to be generated using the original files or downloaded from the release of this repo and placed in that directory
+#t <- read.csv2("scripts/datos/normalizado.csv")
+
+#Tamaño del conjunto de datos
+#unique.ids <- length(unique(t$id))
+
+#Duration 
+#duration <- aggregate.data.frame(t$Frame,by=list(t$id),FUN = max)
+#names(duration) <- c("id","maxFrames")
 ```
 
 # Introduction
@@ -49,7 +61,18 @@ With all the data well-formed, only the \emph{ReplayID}, \emph{Winner} and \emph
 
 A few macro analysis of the data in this dataset will allow us to compare it with other datasets and also appraise its balance and general features. The duration of the matches is represented below.
 
-**Include R code for histogram here**
+```{r duration,echo=FALSE}
+library(ggplot2)
+load("scripts/datos/duration.Rdata")
+ggplot(duration,aes(x=maxFrames/24/60)) + 
+  stat_bin(breaks=c(0,5,10,15,20,25,30,35,40,45,50,55,60,75,90,120,150,180),color="white") +
+  stat_bin(breaks=c(0,5,10,15,20,25,30,35,40,45,50,55,60,75,90,120,150,180), geom="text", aes(label=..count..), vjust=-1.5) +
+  scale_y_continuous(limits = c(0,1000)) + 
+  scale_x_continuous(breaks = c(seq(from=0,to=60,by=5),75,90,120,150,180),minor_breaks = seq(from=0,to=165,by=5)) +
+  xlab("Duration (minutes)") + ylab("Number of games") +
+  theme_bw()
+```
+
 
 The mode is between 20 and 25 minutes, with average equal to **include variables here** and median **include median**. 
 
