Some comments and corrections in the data extraction part for the  issue #4

--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -40,21 +40,21 @@ Instead providing the game logs directly, Robertson and Watson [@RobertsonW14] d
 
 Recently, and built upon the Synnaeve and Bessiere work [@Synnaeve12], Lin et al. [@Stardata17] have released the largest dataset to date. It includes 65646 replays, storing the full state of the game every 3 frames, including up to 30 features by unit and battle detections, storing all the data in TorchCraft format to be accessed by specific software clients. Even using compression mechanisms, this dataset requires 365GB of space. The aim of using this dataset is to apply Deep Learning algorithms that require a large amount of data.
 
-However, there is not a small and limited dataset ready to use for teaching purposes, for example, to directly use as input for certain algorithms without any modification. This is the reason we have used the Robertson and Watson database [@RobertsonW14] to extract a limited number of features and parsed it directly to CSV (Comma Separated Values) format. These CSV files can be easily downloaded and straightforward parsed with any programming language. %PABLO: Any other ideas to justify our dataset?
+However, there is not a small and limited dataset ready to use for teaching purposes, for example, to directly use as input for certain algorithms without any modification. This is the reason we have used the Robertson and Watson database [@RobertsonW14] to extract a limited number of features and parsed it directly to CSV (Comma Separated Values) format. These CSV files can be easily downloaded and straightforward parsed with any programming language. <!--PABLO: Any other ideas to justify our dataset?-->
 
 ## Data extraction and filtering
 
-Six relational databases have been provided by [@RobertsonW14], which means that an intermediate step to produce an usable CSV file is needed. A query which extract data from one single replay has been developed; it is explained on the lines below. A simple function which iterates over all the replays has been developed too, but the most difficult task is parsing individual replays.
+One of the advantages of the presented dataset is that they are already pre-processed and ready to use. The origin of the samples are the replays obtained by [@RobertsonW14]. As previously stated, they provided the data in the form of a huge relational database, so an intermediate step to produce an usable and manageable CSV file was needed. <!--A query which extract data from one single replay has been developed; it is explained on the lines below. A simple function which iterates over all the replays has been developed too, but the most difficult task is parsing individual replays. PABLO: these phrases do not add useful information--> 
 
-Focusing in one single match, identified by it \emph{ReplayID}, the first step is to take the \emph{Duration} and the identifiers \emph{PlayerReplayID} of the two players involved in the game. The \emph{PlayerReplayID} with the minimum value is taken as the first player; this does not actually introduce a bias. 
+For every available match in the database, identified by it \emph{ReplayID}, a different number of samples is extracted. The first step is to take the \emph{Duration} and the identifiers \emph{PlayerReplayID} of the two players involved in the game. The \emph{PlayerReplayID} with the minimum value is taken as the first player; this does not actually introduce a bias. <!-- Pablo: why? Is always the player 1? Because usually people upload the games if they win-->
 
-As a next step, it is important to take a time reference to be able to track the match in every moment. The chosen reference is the \emph{Frame} when a change in resources (\emph{Minerals}, \emph{Gas} and \emph{Supply}) occurs. This instant does not have to be the same for the two players, so all the instants when a change is discovered are saved. This choice implies a lot of empty values in the database; however, this is easily fixed taking the last known value to fill each empty one: if there is not a change for a player, the resources would be the last seen ones.
+Because of the dynamic nature of the game, it is important to use a time reference to be able to track the match in every moment. Instead sampling the matches every certain number of frames as other authors propose, the chosen reference is the \emph{Frame} when a change in resources (\emph{Minerals}, \emph{Gas} and \emph{Supply}) occurs. This instant does not have to be the same for the two players, so all the instants when a change is discovered are saved. This choice implies a lot of empty values in the database; however, this is easily fixed taking the last known value to fill each empty one: if there is not a change for a player, the resources would be the last seen ones.
 
-This decision is also important to track the units: they are valued by their price in resources, and the value recorded in the original database is splitt by regions. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated.
+This decision is also important to track the units, that are valued by their price in resources. However, the value recorded in the original database is split by regions. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated. <!--Pablo: I do not understand the last phrase--> The same process is also performed for the enemy units.
 
-These units values are also available in the enemy's direction: the estimation of the enemy's values is recorded in the dataset, so the last proccess is also done for these records.  
+<!--These units values are also available at the enemy side: the estimation of the enemy values is recorded in the dataset, so the same process is also done for these records. Pablo: I don't know when to use the 's with some names, but I think it is only used when the name "possesses" the thing :P However, I summarized this paragraph above -->
 
-With all the data well-formed, only the \emph{ReplayID}, \emph{Winner} and \emph{Duration} have to be added to the match. The data of a game does not have any missing values, so they are ready to be saved. As it was said before, this proccess has to be repeated for each match. 
+With all the data well-formed, only the \emph{ReplayID}, \emph{Winner} and \emph{Duration} have to be added to the match. The data of a game does not have any missing values, so they are ready to be saved. As it was said before, this process has to be repeated for each match. 
 
 
 ## The big picture
