Minor change about the enemy scores stored in the log. Could @analca3 confirm that my modification is correct? Also, could you explain the region concept? :)

--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -62,7 +62,7 @@ Because of the dynamic nature of the game, it is important to use a time referen
 
 This decision is also important to track the units, that are valued by their price in resources. However, the value recorded in the original database is split by regions. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated. <!--Pablo: I do not understand the last phrase
 Antonio: Let 2000 be the current frame, because a gas change is performed. Maybe the changes in a region occurs in 1400 and 2300, so as 1400 is lower than 2000 (the reference), that is the frame selected to sum up.
---> The same process is also performed for the enemy units. However, this value is an estimation, not a real one, because due to the rules, a player do not know nothing about the enemy unless they see the other. <!-- Antonio: I think this is important, it is an estimated value! But "they see the other" sounds strange...-->
+--> The same process is also performed for the enemy units. However, this value is an estimation, not a real one, because due to the rules, a player do not know nothing about the enemy unless they see the other, and at that moment, these real values are stored in the logs. <!-- Antonio: I think this is important, it is an estimated value! But "they see the other" sounds strange... Pablo: yeah, sounds good, I added that they are also stored in the log at that moment. Could you explain the "region" concept? -->
 
 <!--These units values are also available at the enemy side: the estimation of the enemy values is recorded in the dataset, so the same process is also done for these records. Pablo: I don't know when to use the 's with some names, but I think it is only used when the name "possesses" the thing :P However, I summarized this paragraph above -->
 
