--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -60,9 +60,9 @@ Antonio: The dataset is nearly-balanced, so I think there is no problem here :)
 
 Because of the dynamic nature of the game, it is important to use a time reference to be able to track the match in every moment. Instead sampling the matches every certain number of frames as other authors propose, the chosen reference is the \emph{Frame} when a change in resources (\emph{Minerals}, \emph{Gas} and \emph{Supply}) occurs. This instant does not have to be the same for the two players, so all the instants when a change is discovered are saved. This choice implies a lot of empty values in the database; however, this is easily fixed taking the last known value to fill each empty one: if there is not a change for a player, the resources would be the last seen ones.
 
-This decision is also important to track the units, that are valued by their price in resources. However, the value recorded in the original database is split by regions. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated. <!--Pablo: I do not understand the last phrase
+This decision is also important to track the units, that are valued by their price in resources. However, the value recorded in the original database is split by regions, which are pieces of the map. To register the value of some units, all the region's values have to be summed up, but the frame when these changes occur are not the same that the  resources' ones, so the last change for each region is saved and accumulated. <!--Pablo: I do not understand the last phrase
 Antonio: Let 2000 be the current frame, because a gas change is performed. Maybe the changes in a region occurs in 1400 and 2300, so as 1400 is lower than 2000 (the reference), that is the frame selected to sum up.
---> The same process is also performed for the enemy units. However, this value is an estimation, not a real one, because due to the rules, a player do not know nothing about the enemy unless they see the other, and at that moment, these real values are stored in the logs. <!-- Antonio: I think this is important, it is an estimated value! But "they see the other" sounds strange... Pablo: yeah, sounds good, I added that they are also stored in the log at that moment. Could you explain the "region" concept? -->
+--> The same process is also performed for the enemy units. However, this value is an estimation, not a real one, because due to the rules, a player do not know nothing about the enemy unless they see the other, and at that moment, these real values are stored in the logs. <!-- Antonio: I think this is important, it is an estimated value! But "they see the other" sounds strange... Pablo: yeah, sounds good, I added that they are also stored in the log at that moment. Could you explain the "region" concept? . Antonio: Done.-->
 
 <!--These units values are also available at the enemy side: the estimation of the enemy values is recorded in the dataset, so the same process is also done for these records. Pablo: I don't know when to use the 's with some names, but I think it is only used when the name "possesses" the thing :P However, I summarized this paragraph above -->
 
